Fixed footer spacing.  Compressed and resized slider image.  Removed some items from the nav, they may get added back in the future. Created the initial paddlerama page.

--- a/_css/site.css
+++ b/_css/site.css
@@ -5,15 +5,18 @@ body{
 	background: url(../_img/bg.png) #eceef0;
 	position: relative;
   	margin: 0;
-  	padding-bottom: 6rem;
+  	padding-bottom: 8rem;
   	min-height: 100%;
+}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
+	font-weight: 900;
 }
 .footer {
 	position: absolute;
 	right: 0;
 	bottom: 0;
 	left: 0;
-	padding: 1rem;
+	padding: .5rem;
 }
 /* Header */
 .header{
